Dev Commit - Client & Server
Client:

- Refactored home page folder structure and separated it to components.
- Started separating login and register forms into separate pages.

Server:

- Separated folder utils for the image upload function.
- Refactored and placed the controllers to each file route/controllers.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -404,7 +404,7 @@ html {
 }
 
 .slideshow {
-  animation: slide 500s infinite linear;
+  animation: slide 70s infinite;
 }
 
 @keyframes slide {
@@ -412,7 +412,7 @@ html {
     transform: translateX(0%);
   }
   100% {
-    transform: translateX(-800%);
+    transform: translateX(-100%);
   }
 }
 
